--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required (VERSION 2.8)
 add_compile_options (-std=c++11)
 project (Machine)
 
+link_libraries (pthread)
+
 find_package (Boost COMPONENTS system REQUIRED)
 include_directories (${Boost_INCLUDE_DIRS})
 
