tests for hash builder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,9 @@ set (SOURCE_FILES
         src/sql.hpp
         src/common.hpp
         src/hash.hpp
+        src/hash_tests.hpp
         src/cache.hpp
-        src/main.cpp)
+        src/main.cpp )
 
 link_libraries (pthread memcached crypto++)
 
