--- a/settings.json
+++ b/settings.json
@@ -5,6 +5,12 @@
 			"username": "machine",
 			"password": "password",
 			"schema": "machine_test"
+		},
+		"dbp": {
+			"server": "127.0.0.1:3306",
+			"username": "machine",
+			"password": "password",
+			"schema": "machine_test"
 		}
 	},
 	"cache": {
